--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Cocktails#index</h1>
-<p>Find me in app/views/cocktails/index.html.erb</p>
+<div class="container-index">
+
+
+
+    <div class="left-side">
+
+      <div class="sticky">
+
+
+
+        <div class="button-div">
+        <%= link_to "Add a new cocktail", new_cocktail_path, class: " btn-cocktails" %>
+        </div>
+
+
+
+    </div>
+
+  </div>
+
+  <div class="right-side">
+
+    <div class="container-fluid">
+
+      <div class="row">
+        <% @cocktails.each do |cocktail| %>
+          <div class="card-cocktails col-xs-8 col-md-5">
+          <%= link_to cocktail.name, cocktail_path(cocktail.id) %> </h2>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+
+</div>
