--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<div class="container">
+
+  <h1> Add a new cocktail </h1>
+
+  <%= simple_form_for(@cocktail) do |r|%>
+
+  <div class="row">
+    <%= r.input :name, class: "form-control" %>
+  </div>
+
+   <div class="row">
+    <%= r.submit "Add a Cocktail", class: "btn btn-primary" %>
+  </div>
+
+  <% end %>
+
+</div>
